src/tui/snapshots/gander__tui__render__tests__tui_snapshot_agent_ordered_files.snap
---
source: src/tui/render.rs
expression: "render_tui_text(&session, &Mode::Normal, 100, 16)"
---
┌files─────────────────────────────────────┐┌diff──────────────────────────────────────────────────┐
│• mod     README.md                       ││src/app.rs  +1 -1                                     │
│• mod     src/app.rs                      ││@@ -1 +1 @@                                           │
│                                          ││    1 - old                                           │
│                                          ││    1 + new                                           │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
└──────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
2 files (0/2 viewed, 0 generated/noisy), +2/-2, 0 comments · following @
trunk()..@ · focus files (agent order) · j/k move · space fold · f filter · / search · n/N unviewed
