src/tui/snapshots/gander__tui__render__tests__tui_snapshot_attention_glance_wide.snap
---
source: src/tui/render.rs
expression: "render_tui_text(&session, &mode, 120, 26)"
---
┌files─────────────────────────────┐┌diff──────────────────────────────────────────────────────────────────────────────┐
│• mod     a.gen.rs                ││⌄ 1 file · generated churn · +1 −1                                                │
│• mod     b.gen.rs                ││b.gen.rs  +1 -1                                                                   │
│                                  ││@@ -1 +1 @@                                                                       │
│      ╭ attention glance · 2 skim folds ───────────────────────────────────────────────────────────────────────╮      │
│      │› current · 1 file · +1 −1 · generated churn                                                            │      │
│      │  a.gen.rs                                                                                              │      │
│      │  stale · 1 file · +0 −0 · generated churn                                                              │      │
│      │  b.gen.rs                                                                                              │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      │                                                                                                        │      │
│      ╰enter jump  space peek  a acknowledge  A acknowledge all  esc close─────────────────────────────────────╯      │
│                                  ││                                                                                  │
└──────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
2 files (coverage 0/1, 0 generated/noisy), +2/-2, 0 comments · following @
attention glance · refresh paused · j/k move · enter jump · space peek · a acknowledge · A acknowledge all · esc close
