src/tui/snapshots/gander__tui__render__tests__tui_snapshot_basic_files_and_diff.snap
---
source: src/tui/render.rs
expression: "render_tui_text(&session, &Mode::Normal, 100, 24)"
---
┌files─────────────────────────────────────┐┌diff──────────────────────────────────────────────────┐
│• ▾ src 0/1                               ││src/app.rs  +2 -1                                     │
│  • mod     app.rs                        ││@@ -1,4 +1,5 @@                                       │
│• mod     README.md                       ││    1   fn main() {                                   │
│                                          ││    2 -     old();                                    │
│                                          ││    2 +     new();                                    │
│                                          ││    3 +     extra();                                  │
│                                          ││    4   }                                             │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
└──────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
2 files (0/2 viewed, 0 generated/noisy), +3/-2, 0 comments
trunk()..@ · focus files · j/k tree · space fold · h hide noisy · f filter · ? agent order · t/p/b/R
