src/tui/snapshots/gander__tui__render__tests__tui_snapshot_binary_and_large_placeholders.snap
---
source: src/tui/render.rs
expression: "render_tui_text(&session, &Mode::Normal, 100, 16)"
---
┌files─────────────────────────────────────┐┌diff──────────────────────────────────────────────────┐
│• mod     huge.txt                        ││huge.txt  +0 -0                                       │
│• binary     logo.png                     ││  ⊘ large diff hidden: 6 lines exceed the 5 line thres│
│                                          ││hold (press L to render)                              │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
└──────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
2 files (0/2 viewed, 0 generated/noisy), +0/-0, 0 comments · following @
trunk()..@ · focus files · j/k move · space fold · f filter · / search · n/N unviewed · enter viewed
