src/tui/snapshots/gander__tui__render__tests__tui_snapshot_chunk_list.snap
---
source: src/tui/render.rs
expression: "render_tui_text(&session, &mode, 100, 20)"
---
┌files─────────────────────────────────────┐┌diff──────────────────────────────────────────────────┐
│• ▾ src 0/1                               ││src/app.rs  +2 -1                                     │
│  • mod     app.rs                        ││@@ -1,4 +1,5 @@                                       │
│                                          ││    1   fn main() {                                   │
│        ┌review chunks───────────────────────────────────────────────────────────────────┐        │
│        │Agent-suggested review units (can span or subdivide files)                      │        │
│        │› core change (1/2) [spotlight] src/app.rs:2-3 — start here                     │        │
│        │  core change (2/2) [spotlight] src/app.rs:4 — start here                       │        │
│        │                                                                                │        │
│        │↑/↓ or j/k move · enter jump · esc close                                        │        │
│        │                                                                                │        │
│        │                                                                                │        │
│        │                                                                                │        │
│        │                                                                                │        │
│        │                                                                                │        │
│        └────────────────────────────────────────────────────────────────────────────────┘        │
│                                          ││                                                      │
└──────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
1 files (0/1 viewed, 0 generated/noisy), +2/-1, 0 comments
review chunks · j/k move · enter jump · esc close
