src/tui/snapshots/gander__tui__render__tests__tui_snapshot_comment_list.snap
---
source: src/tui/render.rs
expression: "render_tui_text(&session, &mode, 100, 24)"
---
┌files───────────────────────┐┌diff────────────────────────────────────────────────────────────────┐
│• ▾ src 0/1                 ││src/app.rs  +1 -1                                                   │
│  • mod     app.rs          ││@@ -1 +1 @@                                                         │
│                            ││1   1 - old                                                         │
│                            ││╭──────────────────────────────────────────────────────────────────╮│
│         ┌comments──────────────────────────────────────────────────────────────────────┐        ││
│         │  [→ note] human:local [draft] src/app.rs File-level note                     │        ││
│         │› [→ agent] human:local [todo] [question] [fix] src/app.rs:1 Line note that   │        ││
│         │needs fixing                                                                  │────────╯│
│         │                                                                              │         │
│         │j/k move · n general · enter jump · e edit · s state · R ready drafts · a     │         │
│         │action · K kind · x delete · esc close                                        │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         └──────────────────────────────────────────────────────────────────────────────┘         │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
1 files (0/1 viewed, 0 generated/noisy), +1/-1, 2 comments · following @
comments · j/k move · n general · enter jump · e edit · s state · R ready drafts · a action · K kind
